updated travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
 
     on_failure: always
 
-  slack: srboeingdotnet:pZz5KfrgntyjLpS9a1d2b1rH
+  slack: srboeingdotnet:UIU3Bl3s8QViLrC2yS7GV9NI
 
 mono: none
 
@@ -18,8 +18,8 @@ dotnet: 2.1
 
 script:
   - chmod +x ./deploy.sh
-  - dotnet restore MarketPlace/MarketPlace.csproj
-  - dotnet restore MarketPlace.Tests/MarketPlace.Tests.csproj
+  - dotnet restore MarketPlaceBackend/MarketPlaceBackend.csproj
+  - dotnet restore MarketPlaceBackend.Tests/MarketPlaceBackend.Tests.csproj
   - dotnet test MarketPlaceBackend.Tests
 
 after_success:
