--- a/MarketPlaceBackend/Dockerfile
+++ b/MarketPlaceBackend/Dockerfile
@@ -1,21 +1,17 @@
-FROM microsoft/dotnet:2.1-aspnetcore-runtime AS base
+FROM microsoft/dotnet:2.1-sdk AS build-env
 WORKDIR /app
-EXPOSE 4000
-EXPOSE 2720
 
-FROM microsoft/dotnet:2.1-sdk AS build
-WORKDIR /MarketplaceBackend
+# Copy csproj and restore as distinct layers
 COPY *.csproj ./
 RUN dotnet restore
-COPY . .
 
-WORKDIR /MarketplaceBackend
-RUN dotnet build MarketPlaceBackend.csproj -c Release -o /app
+# Copy everything else and build
+COPY . ./
+RUN dotnet publish -c Release -o out
 
-FROM build AS publish
-RUN dotnet publish MarketPlaceBackend.csproj -c Release -o /app
-
-FROM base AS final
+# Build runtime image
+FROM microsoft/dotnet:aspnetcore-runtime
 WORKDIR /app
-COPY --from=publish /app .
+EXPOSE 2720
+COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "MarketPlaceBackend.dll"]
