changed docker-compose file for deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,13 @@ version: '3.4'
 services:
   web:
     build: ./MarketPlaceBackend
-    ports:
-        - "2720:80"
     depends_on:
         - db
+    labels:
+     - "SERVICE_NAME=marketplace-service"
+     - "SERVICE_TAG=marketplace-serviceTag"
+    expose:
+     - "2720"
     restart: always
   db:
     image: "microsoft/mssql-server-linux"
